# WebSkills

./: README.md  compose.yaml
database/: db_init.sql
proxy/conf.d/: default.conf
server/: Cargo.toml  Dockerfile  Makefile.toml
server/.cargo/: config.toml
server/cache/: Cargo.toml
server/cache/src/: lib.rs  tests.rs
server/database/: Cargo.toml
server/database/src/: lib.rs  tests.rs
server/worker/: Cargo.toml
server/worker/src/: main.rs
web/: Dockerfile  package-lock.json  package.json
